1998-11-15  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-option-value-indicator): moved here.

1998-11-14  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el, psgml-edit.el: Fix from David Megginson to some
	regexps for _: in names.
	(sgml-build-custom-menus): Do not call easy-menu-change with empty
	menu.

	* psgml-edit.el (sgml-do-set-option): Don't modify the *Help*
	buffer directly, call sgml-append-to-help-buffer. Fixes problem
	with read-only buffer.
	(sgml-append-to-help-buffer): new func.
	
	* psgml.el (sgml-main-menu):  Options handling changed after
	suggestion and code from Matthias Clasen
	(sgml-update-all-options-menus): new func. called by
	activate-menubar-hook
	
Thu Nov  5 20:59:08 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-parse-processing-instruction): removed let
	of sgml-markup-start. Was probably wrong solution to problem with
	sgml-markup-start beeing nil. Added in-declaration parameter. If
	in a declaration, no fontification should be done.
	(sgml-parse-prolog): do not call sgml-skip-ds, rather call
	parse-s, parse-pi as this is what "other prolog" contains.

1998-10-31  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.1.5 released

	* psgml-parse.el (sgml-declared-value-notation): change 'notation
	to 'NOTATION
	
Sat Oct 31 20:00:22 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-cache-catalog): Use file-truename for
	file-attributes, to get modification time from real file and not
	from symlink.

	* psgml.el (xml-mode): Do not build a syntax table
	(sgml-dtd-menu): moved Custom DTD's to submenu
	(sgml-markup-menu): moved Custom Markup to submenu
	(sgml-build-custom-menus): Make submenus for Custom DTD and Markup

	* psgml-parse.el (xml-parser-syntax): build special syntax table
	for XML.
	(sgml-with-parser-syntax): Use sgml-parser-syntax or
	xml-parser-syntax depending on sgml-xml-p

Wed Oct 28 23:15:38 1998  Lennart Staflin  <lenst@lysator.liu.se>
